# otrime-backend

./: .env  Cargo.toml  LICENSE  README.md
migrations/: 20220312224729_users.sql  20220312224744_questions.sql  20220312224750_answers.sql
other/: index.html
src/lib/: mod.rs
src/lib/database/: actions.rs  mod.rs
src/lib/errors/: mod.rs
src/lib/http/: ids.rs  mod.rs  models.rs
src/lib/http/web/: routes.rs
src/lib/se/: mod.rs
