[package]
name = "rust-helping-network"
version = "0.1.0"
edition = "2021"
[lib]
name = "api"
path = "src/lib/mod.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
bcrypt = "0.11.0"
chrono = {version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
env_logger = "0.9.0"
lettre = "0.10.0-rc.4"
regex = "1.5.4"
serde = {version = "1.0.136", features= ["derive"]}
serde_json = "1.0.79"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid", "json"]}
reqwest = { version = "0.11", features = ["json"] }
sqlx-rt = "0.5.11"
thiserror = "1.0.30"
tokio = {version = "1.17.0", features = ["rt-multi-thread", "macros"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
tinytemplate = "1.2.1"
easy_file_system = "0.1.2"
lettre_email = "0.9.4"
redis = { version = "0.17.0", features = ["tokio-comp"] }
axum = "0.5.1"
tower-http = { version = "0.2.5", features = ["cors", "fs"] }
tower-cookies = "0.6.0"
http = "0.2.6"
